fix: projects align

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -254,6 +254,7 @@ body {
         grid-template-columns: repeat(2, 1fr);
         gap: 22px;
         padding: 0 12px;
+        justify-items: center;
         
         article {
           display: flex;
